[package]
name = "toyredis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.18.2", features=["full"]}
mini-redis = "0.4.1"
bytes = "1"
atoi = "1"
rand = "0.8.5"
byteorder = "1"
bitmatch = "0.1.1"
thiserror = "1.0.31"